update po files
git-svn-id: file:///srv/svn/publican/trunk@1051 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/kn-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/kn-IN/Conventions.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2009-12-01T23:44:40\n"
+"POT-Creation-Date: 2010-02-26T01:37:23\n"
 "PO-Revision-Date: 2009-12-02 13:08+0530\n"
 "Last-Translator: Shankar Prasad <svenkate@redhat.com>\n"
 "Language-Team: Kannada <kde-l10n-kn@kde.org>\n"
@@ -60,11 +60,13 @@ msgstr ""
 "ನಿಗದಿತ ಪದಗಳು ಹಾಗು ಪದಗುಚ್ಛಗಳತ್ತ ಗಮನವನ್ನು ಸೆಳೆಯಲು ನಾಲ್ಕು ಟೈಪೋಗ್ರಾಫಿಕ್ ಅನುಸರಣೆಗಳನ್ನು "
 "ಬಳಸಲಾಗುತ್ತದೆ. ಈ ಅನುಸರಣೆಗಳು ಹಾಗು ಅವುಗಳನ್ನು ಅನ್ವಯಿಸಲಾಗುವ ಸನ್ನಿವೇಶಗಳು ಈ ಕೆಳಗಿನಂತಿವೆ."
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
 msgstr "<literal>Mono-spaced Bold</literal>"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
@@ -86,7 +88,8 @@ msgstr ""
 "my_next_bestselling_novel</command> ಎಂಬ ಆಜ್ಞೆಯನ್ನು ನಮೂದಿಸಿ ಹಾಗು ಅದನ್ನು ಚಲಾಯಿಸಲು "
 "<keycap>Enter</keycap> ಅನ್ನು ಒತ್ತಿ. "
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
@@ -95,14 +98,14 @@ msgstr ""
 "ಹಾಗು ಅವುಗಳೆಲ್ಲವೂ  mono-spaced bold ನಲ್ಲಿ ಸೂಚಿಸಲಾಗಿದ್ದರಿಂದ ಬಾಕಿ ಪಠ್ಯಗಳಿಗಿಂತ "
 "ಪ್ರತ್ಯೇಕವಾಗಿ ಕಾಣುತ್ತವೆ."
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
 msgstr ""
-"ಕೀಲಿ-ಸಂಯೋಜನೆಯ ಪ್ರತಿಯೊಂದು ಭಾಗವನ್ನು ಹೈಫನ್‌ನಿಂದ ಜೋಡಿಸುವ ಮೂಲಕ ಕೀಲಿ ಕ್ಯಾಪ್‌ಗಳಿಂದ "
-"ಕೀಲಿ-ಸಂಯೋಜನೆಗಳನ್ನು "
-"ಪ್ರತ್ಯೇಕಿಸಬಹುದಾಗಿದೆ. ಉದಾಹರಣೆಗೆ:"
+"ಕೀಲಿ-ಸಂಯೋಜನೆಯ ಪ್ರತಿಯೊಂದು ಭಾಗವನ್ನು ಹೈಫನ್‌ನಿಂದ ಜೋಡಿಸುವ ಮೂಲಕ ಕೀಲಿ ಕ್ಯಾಪ್‌ಗಳಿಂದ ಕೀಲಿ-"
+"ಸಂಯೋಜನೆಗಳನ್ನು ಪ್ರತ್ಯೇಕಿಸಬಹುದಾಗಿದೆ. ಉದಾಹರಣೆಗೆ:"
 
 #. Tag: para
 #, no-c-format
@@ -122,17 +125,19 @@ msgstr ""
 "ಮರಳಲು <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</"
 "keycap></keycombo> ಅನ್ನು ಒತ್ತಿ. "
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
 "ಮೊದಲನೆ ವಾಕ್ಯವು ನಿಗದಿತ ಕೀಲಿ ಕ್ಯಾಪ್ ಅನ್ನು  ಒತ್ತಲು ಹೈಲೈಟ್ ಮಾಡುತ್ತದೆ. ಎರಡನೆಯದು ಎರಡು "
-"ಜೋಡಿಗಳನ್ನು ಹೈಲೈಟ್‌ ಮಾಡುತ್ತದೆ"
-"(ಪ್ರತಿ ಮೂರು ಕೀಲಿ ಕ್ಯಾಪ್‌ಗಳ ಜೋಡಿಯಲ್ಲಿ ಪ್ರತಿಯೊಂದು ಜೋಡಿಯನ್ನು ಏಕಕಾಲದಲ್ಲಿ ಒತ್ತಲಾಗುತ್ತದೆ)."
+"ಜೋಡಿಗಳನ್ನು ಹೈಲೈಟ್‌ ಮಾಡುತ್ತದೆ(ಪ್ರತಿ ಮೂರು ಕೀಲಿ ಕ್ಯಾಪ್‌ಗಳ ಜೋಡಿಯಲ್ಲಿ ಪ್ರತಿಯೊಂದು ಜೋಡಿಯನ್ನು "
+"ಏಕಕಾಲದಲ್ಲಿ ಒತ್ತಲಾಗುತ್ತದೆ)."
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
@@ -160,17 +165,19 @@ msgstr ""
 msgid "<application>Proportional Bold</application>"
 msgstr "<application>Proportional Bold</application>"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
 "menu titles and sub-menu titles. For example:"
 msgstr ""
-"ಅನ್ವಯದ ಹೆಸರುಗಳು, ಸಂವಾದ ಚೌಕದ ಪಠ್ಯ; ಲೇಬಲ್‌ ಮಾಡಲಾದಂತಹ ಗುಂಡಿಗಳು; ಗುರುತು-ಚೌಕ "
-"ಹಾಗು ರೇಡಿಯೋ ಗುಂಡಿಯ ಲೇಬಲ್‌ಗಳು; ಮೆನು ಶೀರ್ಷಿಕೆಗಳು ಹಾಗು ಉಪ-ಮೆನು ಶೀರ್ಷಿಕೆಗಳಂತಹ ಒಂದು "
+"ಅನ್ವಯದ ಹೆಸರುಗಳು, ಸಂವಾದ ಚೌಕದ ಪಠ್ಯ; ಲೇಬಲ್‌ ಮಾಡಲಾದಂತಹ ಗುಂಡಿಗಳು; ಗುರುತು-ಚೌಕ ಹಾಗು "
+"ರೇಡಿಯೋ ಗುಂಡಿಯ ಲೇಬಲ್‌ಗಳು; ಮೆನು ಶೀರ್ಷಿಕೆಗಳು ಹಾಗು ಉಪ-ಮೆನು ಶೀರ್ಷಿಕೆಗಳಂತಹ ಒಂದು "
 "ಗಣಕದಲ್ಲಿ ಎದುರಾಗುವ ಪದಗಳು ಅಥವ ವಾಕ್ಯಗಳನ್ನು ಇದು ಸೂಚಿಸುತ್ತದೆ. ಉದಾಹರಣೆಗೆ:"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -182,12 +189,13 @@ msgid ""
 msgstr ""
 "<application>ಮೌಸ್‌ನ ಆದ್ಯತೆಗಳು</application> ಎಂಬುದನ್ನು ಆರಂಭಿಸಲು ಮುಖ್ಯ ಮೆನು ಪಟ್ಟಿಯಿಂದ "
 "<menuchoice><guimenu>ವ್ಯವಸ್ಥೆ</guimenu><guisubmenu>ಆದ್ಯತೆಗಳು</"
-"guisubmenu><guimenuitem>ಮೌಸ್</guimenuitem></menuchoice> ಅನ್ನು ಆಯ್ಕೆ ಮಾಡಿ. ಮೌಸ್‌ನ ಮೂಲ "
-"ಗುಂಡಿಗಳನ್ನು ಎಡದಿಂದ ಬಲಕ್ಕೆ ಬದಲಾಯಿಸಲು (ಎಡಗೈಯಲ್ಲಿ ಬಳಸಲು ಯೋಗ್ಯವಾಗಿಸಲು ),<guilabel>ಗುಂಡಿಗಳು</"
-"guilabel> ಟ್ಯಾಬ್‌ನಿಂದ, <guilabel>ಎಡಗೈಯ ಮೌಸ್</guilabel> ಗುರುತು ಚೌಕವನ್ನು ಕ್ಲಿಕ್ ಮಾಡಿ ಹಾಗು "
-"<guibutton>ಮುಚ್ಚು</guibutton> ಅನ್ನು ಕ್ಲಿಕ್ಕಿಸಿ. "
+"guisubmenu><guimenuitem>ಮೌಸ್</guimenuitem></menuchoice> ಅನ್ನು ಆಯ್ಕೆ ಮಾಡಿ. ಮೌಸ್‌ನ "
+"ಮೂಲ ಗುಂಡಿಗಳನ್ನು ಎಡದಿಂದ ಬಲಕ್ಕೆ ಬದಲಾಯಿಸಲು (ಎಡಗೈಯಲ್ಲಿ ಬಳಸಲು ಯೋಗ್ಯವಾಗಿಸಲು ),"
+"<guilabel>ಗುಂಡಿಗಳು</guilabel> ಟ್ಯಾಬ್‌ನಿಂದ, <guilabel>ಎಡಗೈಯ ಮೌಸ್</guilabel> ಗುರುತು "
+"ಚೌಕವನ್ನು ಕ್ಲಿಕ್ ಮಾಡಿ ಹಾಗು <guibutton>ಮುಚ್ಚು</guibutton> ಅನ್ನು ಕ್ಲಿಕ್ಕಿಸಿ. "
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -204,10 +212,10 @@ msgid ""
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
 "ಒಂದು <application>gedit</application> ಕಡತಕ್ಕೆ ಹೊಸದೊಂದು ಚಿಹ್ನೆಯನ್ನು ಸೇರಿಸಲು, "
-"ಮುಖ್ಯ ಮೆನು ಪಟ್ಟಿಯಿಂದ <menuchoice><guimenu>ಅನ್ವಯಗಳು</guimenu><guisubmenu>ಸಲಕರಣೆಗಳು</"
-"guisubmenu><guimenuitem>ಕ್ಯಾರೆಕ್ಟರ್ ಮ್ಯಾಪ್</guimenuitem></menuchoice> ಅನ್ನು ಆಯ್ಕೆ ಮಾಡಿ. "
-" ಮುಂದಕ್ಕೆ, <application>ಕ್ಯಾರಕ್ಟರ್ ಮ್ಯಾಪ್‌  </application> ಮೆನು ಪಟ್ಟಿಯಿಂದ<menuchoice><"
-"guimenu>ಹುಡುಕು</"
+"ಮುಖ್ಯ ಮೆನು ಪಟ್ಟಿಯಿಂದ <menuchoice><guimenu>ಅನ್ವಯಗಳು</"
+"guimenu><guisubmenu>ಸಲಕರಣೆಗಳು</guisubmenu><guimenuitem>ಕ್ಯಾರೆಕ್ಟರ್ ಮ್ಯಾಪ್</"
+"guimenuitem></menuchoice> ಅನ್ನು ಆಯ್ಕೆ ಮಾಡಿ.  ಮುಂದಕ್ಕೆ, <application>ಕ್ಯಾರಕ್ಟರ್ "
+"ಮ್ಯಾಪ್‌  </application> ಮೆನು ಪಟ್ಟಿಯಿಂದ<menuchoice><guimenu>ಹುಡುಕು</"
 "guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> ಅನ್ನು ಆರಿಸಿ, "
 "<guilabel>ಹುಡುಕು </guilabel> ಸ್ಥಳದಲ್ಲಿ ಚಿಹ್ನೆಯ ಹೆಸರನ್ನು ನಮೂದಿಸಿ ಹಾಗು "
 "<guibutton>ಮುಂದಕ್ಕೆ</guibutton> ಅನ್ನು ಕ್ಲಿಕ್ಕಿಸಿ. ನೀವು ಬಯಸಿದ ಚಿಹ್ನೆಯು "
@@ -215,10 +223,11 @@ msgstr ""
 "ಮಾಡಬೇಕಿರುವ ಪಠ್ಯ</guilabel> ಸ್ಥಳದಲ್ಲಿ ಇರಿಸಲು ಹೈಲೈಟ್‌ ಆದಂತಹ ಈ ಚಿಹ್ನೆಯ ಮೇಲೆ ಎರಡು ಬಾರಿ "
 "ಕ್ಲಿಕ್ಕಿಸಿ ಹಾಗು  <guibutton>ಕಾಪಿ ಮಾಡು</guibutton> ಗುಂಡಿಯನ್ನು ಕ್ಲಿಕ್ಕಿಸಿ . ಈಗ ನಿಮ್ಮ "
 "ದಸ್ತಾವೇಜಿಗೆ ಮರಳಿ ಹಾಗು  <application>gedit</application> ಮೆನು ಪಟ್ಟಿಯಿಂದ "
-"<menuchoice><guimenu>ಸಂಪಾದನೆ</guimenu><guimenuitem>ಅಂಟಿಸು</"
-"guimenuitem></menuchoice>ಅನ್ನು ಆಯ್ಕೆ ಮಾಡಿ."
+"<menuchoice><guimenu>ಸಂಪಾದನೆ</guimenu><guimenuitem>ಅಂಟಿಸು</guimenuitem></"
+"menuchoice>ಅನ್ನು ಆಯ್ಕೆ ಮಾಡಿ."
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
@@ -241,7 +250,8 @@ msgstr ""
 "<application><replaceable>Proportional Bold Italic</replaceable></"
 "application> "
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
@@ -318,14 +328,16 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr "Publican ಎನ್ನುವುದು ಒಂದು <firstterm>DocBook</firstterm> ಪ್ರಕಟಿಸುವ ವ್ಯವಸ್ಥೆಯಾಗಿದೆ."
+msgstr ""
+"Publican ಎನ್ನುವುದು ಒಂದು <firstterm>DocBook</firstterm> ಪ್ರಕಟಿಸುವ ವ್ಯವಸ್ಥೆಯಾಗಿದೆ."
 
 #. Tag: title
 #, no-c-format
 msgid "Pull-quote Conventions"
 msgstr "ಪುಲ್‌-ಕೋಟ್ ಅನುಸರಣೆಗಳು"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
@@ -333,7 +345,8 @@ msgstr ""
 "ಟರ್ಮಿನಲ್ ಔಟ್‌ಪುಟ್ ಹಾಗು ಆಕರ-ಸಂಜ್ಞೆ ಪಟ್ಟಿಗಳು ಸುತ್ತಮುತ್ತಲಿನ ಪಠ್ಯದಿಂದ ಗೋಚರಿಸುವ ರೂಪದಲ್ಲಿ "
 "ಹೊಂದಿಸಲಾಗುತ್ತದೆ."
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
@@ -341,7 +354,8 @@ msgstr ""
 "ಟರ್ಮಿನಲ್‌ಗೆ ಕಳುಹಿಸಲಾಗುವ ಔಟ್‌ಪುಟ್‌ಗಳನ್ನು <computeroutput>mono-spaced roman</"
 "computeroutput> ನಲ್ಲಿ ಬರೆಯಲಾಗುತ್ತದೆ ಹಾಗು ಹೀಗೆ ಪ್ರದರ್ಶಿಸಲಾಗುತ್ತದೆ:"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
@@ -368,14 +382,15 @@ msgstr ""
 msgid "Note"
 msgstr "ಸೂಚನೆ"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
-"ಸೂಚನೆಯು, ಕೈಯಲ್ಲಿರುವ ಕೆಲಸವನ್ನು ನಿಭಾಯಿಸಲು ಬಳಸಬಹುದಾದ ಒಂದು ಹತ್ತಿರದ ದಾರಿಗಳು "
-"ಅಥವ ಪರ್ಯಾಯ ಪರಿಹಾರವಾಗಿರುತ್ತದೆ. ಸೂಚನೆಯನ್ನು ಆಲಕ್ಷಿಸುವುದರಿಂದ ಯಾವುದೆ ಋಣಾತ್ಮಕ "
+"ಸೂಚನೆಯು, ಕೈಯಲ್ಲಿರುವ ಕೆಲಸವನ್ನು ನಿಭಾಯಿಸಲು ಬಳಸಬಹುದಾದ ಒಂದು ಹತ್ತಿರದ ದಾರಿಗಳು ಅಥವ "
+"ಪರ್ಯಾಯ ಪರಿಹಾರವಾಗಿರುತ್ತದೆ. ಸೂಚನೆಯನ್ನು ಆಲಕ್ಷಿಸುವುದರಿಂದ ಯಾವುದೆ ಋಣಾತ್ಮಕ "
 "ಪರಿಣಾಮವಿರುವುದಿಲ್ಲದಿದ್ದರೂ ನಿಮ್ಮ ಕೆಲಸವನ್ನು ಸುಲಭಗೊಳಿಸುವ ಒಂದು ಉಪಾಯದಿಂದ ನೀವು "
 "ವಂಚಿತರಾಗಬಹುದು."
 
@@ -384,7 +399,8 @@ msgstr ""
 msgid "Important"
 msgstr "ಮಹತ್ವವಾದ ಮಾಹಿತಿ"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
@@ -394,14 +410,16 @@ msgstr ""
 "ಸುಲಭವಾಗಿ ಮರೆತು ಹೋಗಬಹುದಾದ ಪ್ರಮುಖ ಚೌಕಗಳ ವಿವರಗಳು: ಕೇವಲ ಪ್ರಸಕ್ತ ಅಧಿವೇಶನಕ್ಕೆ ಮಾತ್ರ "
 "ಅನ್ವಯಿಸುವ ಸಂರಚನಾ ಬದಲಾವಣೆಗಳು, ಅಥವ ಒಂದು ಅಪ್‌ಡೇಟನ್ನು ಅನ್ವಯಿಸುವ ಮೊದಲು ಮರು "
 "ಆರಂಭಗೊಳಿಸಬೇಕಿರುವ ಸೇವೆಗಳು. \"ಪ್ರಮುಖ(Important) ಎಂದು ಗುರುತುಹಾಕಲಾದ ಚೌಕಗಳನ್ನು "
-"ಆಲಕ್ಷಿಸುವುದರಿಂದ ಮಾಹಿತಿಯು ನಾಶಗೊಳ್ಳುವುದಿಲ್ಲ, ಆದರೆ ಕಿರಿಕಿರಿ ಹಾಗು ನಿರಾಶೆಗೆ ಕಾರಣವಾಗಬಹುದು."
+"ಆಲಕ್ಷಿಸುವುದರಿಂದ ಮಾಹಿತಿಯು ನಾಶಗೊಳ್ಳುವುದಿಲ್ಲ, ಆದರೆ ಕಿರಿಕಿರಿ ಹಾಗು ನಿರಾಶೆಗೆ "
+"ಕಾರಣವಾಗಬಹುದು."
 
 #. Tag: title
 #, no-c-format
 msgid "Warning"
 msgstr "ಎಚ್ಚರಿಕಾ ಸೂಚನೆ"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
