--- a/publican/datadir/Common_Content/common/ta-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/ta-IN/Conventions.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2009-12-01T23:44:40\n"
+"POT-Creation-Date: 2010-02-26T01:37:23\n"
 "PO-Revision-Date: 2009-12-02 12:08+0530\n"
 "Last-Translator: \n"
 "Language-Team: American English <kde-i18n-doc@kde.org>\n"
@@ -12,8 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Lokalize 1.0\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\\n"
-"\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\\n\n"
 
 #. Tag: title
 #, no-c-format
@@ -61,18 +60,20 @@ msgstr ""
 "நான்கு டைப்போகிராபி பெயரிடல்கள் குறிப்பிட்ட வார்த்தைகள் அல்லது வாக்கியங்களை குறிப்பிட "
 "அழைக்க பயன்படுகிறது. இந்த பெயரிடல்கள் மற்றும் சூழ்நிலைகள் பின்வரும் இருக்கும்."
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
 msgstr "<literal>மோனோ-இடைவெளி தடிமன்</literal>"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
-"கணினி உள்ளீடு, ஷெல் கட்டளைகள், கோப்பு பெயர்கள் மற்றும் பாதைகளையும் சேர்த்து "
-"முன்னிலைப்படுத்த உதவுகிறது. மேலும் தலைப்பெழுத்து விசை மற்றும் விசை கலவைகளையும் "
-"முன்னிலைப்படுத்த பயன்படுகிறது. எடுத்துக்காட்டாக:"
+"கணினி உள்ளீடு, ஷெல் கட்டளைகள், கோப்பு பெயர்கள் மற்றும் பாதைகளையும் சேர்த்து முன்னிலைப்படுத்த "
+"உதவுகிறது. மேலும் தலைப்பெழுத்து விசை மற்றும் விசை கலவைகளையும் முன்னிலைப்படுத்த "
+"பயன்படுகிறது. எடுத்துக்காட்டாக:"
 
 #. Tag: para
 #, no-c-format
@@ -87,7 +88,8 @@ msgstr ""
 "command> கட்டளையை கட்டளைவரியில் உள்ளிட்டு <keycap>Enter</keycap> ஐ அழுத்தி இதனை "
 "இயக்கவும். "
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
@@ -95,7 +97,8 @@ msgstr ""
 "மேலே உள்ளது ஒரு கோப்பு பெயர், ஒரு ஷெல் கட்டளை மற்றும் ஒரு விசையை மோனோ இடைவெளி "
 "தடிமனாகவும் உள்ளிடும் மற்றும் இதர வேறுபடுத்தும் உரைகளுக்கு நன்றி."
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
@@ -121,7 +124,8 @@ msgstr ""
 "keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> ஐ அழுத்தி X-Windows "
 "அமர்வுக்குத் திரும்பவும். "
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
@@ -131,7 +135,8 @@ msgstr ""
 "செட்கள் மூன்று விசைகளை முன்னிலைப்படுத்துகிறது (ஒவ்வொரு செட்டும் ஒரே நேரத்தில் "
 "அழுத்தப்பட்டது). "
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
@@ -158,7 +163,8 @@ msgstr ""
 msgid "<application>Proportional Bold</application>"
 msgstr "<application>விகிதபடி தடிமன்</application>"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
@@ -168,7 +174,8 @@ msgstr ""
 "உரையாடல் பெட்டி உரை; பெயரிடப்பட்ட பொத்தான்கள்; சோதனை பெட்டி மற்றும் ரேடியோ பொத்தான் "
 "பெயர்கள் மெனு தலைப்புகள் மற்றும் துணை மெனு தலைப்புகளை கொண்டிருக்கும். எடுத்துக்காட்டாக:"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -178,15 +185,16 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"<menuchoice><guimenu>கணினி </guimenu><guisubmenu> முன்னுரிமைகள் </guisubmenu><guimenuitem> "
-"சுட்டி</guimenuitem></menuchoice> என்பதிலிருந்து <application>சுட்டி முன்னுரிமைகளை<"
-"/application> தேர்ந்தெடுக்கலாம். "
-"<guilabel>பொத்தான்கள்</guilabel> தத்தலில், <guilabel>இடது கை சுட்டி</guilabel> சோதனை "
-"பெட்டியை சொடுக்கி  <guibutton>மூடு</guibutton> பொத்தனை சொடுக்கி முதன்மை சுட்டி பொத்தானான "
-"இடப்பக்கத்திலிருந்து வலப்பக்கத்திற்கு மாற்றவும் (இடது கை பழக்கமுள்ளவர்களுக்கு ஏற்றவாறு "
-"மாற்றலாம்)."
+"<menuchoice><guimenu>கணினி </guimenu><guisubmenu> முன்னுரிமைகள் </"
+"guisubmenu><guimenuitem> சுட்டி</guimenuitem></menuchoice> என்பதிலிருந்து "
+"<application>சுட்டி முன்னுரிமைகளை</application> தேர்ந்தெடுக்கலாம். "
+"<guilabel>பொத்தான்கள்</guilabel> தத்தலில், <guilabel>இடது கை சுட்டி</guilabel> "
+"சோதனை பெட்டியை சொடுக்கி  <guibutton>மூடு</guibutton> பொத்தனை சொடுக்கி முதன்மை "
+"சுட்டி பொத்தானான இடப்பக்கத்திலிருந்து வலப்பக்கத்திற்கு மாற்றவும் (இடது கை "
+"பழக்கமுள்ளவர்களுக்கு ஏற்றவாறு மாற்றலாம்)."
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -202,22 +210,22 @@ msgid ""
 "document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
-"<application>gedit</application> கோப்பில் சிறப்பு எழுத்துக்களை நுழைக்க, <menuchoice>"
-"<guimenu>நிரல்கள் </guimenu><guisubmenu> துணைப்பொருட்களை </"
-"guisubmenu><guimenuitem> எழுத்துரு மேப்</guimenuitem></menuchoice> என்பதை முதன்மை மெனு "
-"பட்டியிலிருந்து தேர்ந்தெடுக்கவும். அடுத்து <menuchoice><guimenu>தேடு </guimenu><"
-"guimenuitem> கண்டுபிடி&hellip;</guimenuitem></menuchoice> என்பதை <application>எழுத்துரு "
-"மேப்</application> மெனு பட்டியில் "
-"தேர்ந்தெடுத்து, <guilabel>தேடு</guilabel> புலத்தில் உள்ளிட்டு <guibutton>அடுத்து</"
-"guibutton> என்பதை சொடுக்கவும். <guilabel>எழுத்து அட்டவணையில்</guilabel> நீங்கள் "
-"வரிசைப்படுத்திய எழுத்துக்களை முன்னிலைப்படும். இந்த முன்னிலைப்படுத்தப்பட்ட எழுத்தை "
-"<guilabel>நகலெடுக்க உரை</guilabel> புலத்தில் வைத்து <guibutton>நகல்</guibutton> "
-"பொத்தானை சொடுக்கவும். பின் உங்கள் ஆவணத்திற்கு சென்று <menuchoice><guimenu>திருத்து<"
-"/guimenu><guimenuitem>ஒட்டு</"
-"guimenuitem></menuchoice> என்பதை <application>gedit</application> மெனு பட்டையில் "
-"தேர்ந்தெடுக்கவும். "
+"<application>gedit</application> கோப்பில் சிறப்பு எழுத்துக்களை நுழைக்க, "
+"<menuchoice><guimenu>நிரல்கள் </guimenu><guisubmenu> துணைப்பொருட்களை </"
+"guisubmenu><guimenuitem> எழுத்துரு மேப்</guimenuitem></menuchoice> என்பதை "
+"முதன்மை மெனு பட்டியிலிருந்து தேர்ந்தெடுக்கவும். அடுத்து <menuchoice><guimenu>தேடு </"
+"guimenu><guimenuitem> கண்டுபிடி&hellip;</guimenuitem></menuchoice> என்பதை "
+"<application>எழுத்துரு மேப்</application> மெனு பட்டியில் தேர்ந்தெடுத்து, "
+"<guilabel>தேடு</guilabel> புலத்தில் உள்ளிட்டு <guibutton>அடுத்து</guibutton> "
+"என்பதை சொடுக்கவும். <guilabel>எழுத்து அட்டவணையில்</guilabel> நீங்கள் வரிசைப்படுத்திய "
+"எழுத்துக்களை முன்னிலைப்படும். இந்த முன்னிலைப்படுத்தப்பட்ட எழுத்தை <guilabel>நகலெடுக்க "
+"உரை</guilabel> புலத்தில் வைத்து <guibutton>நகல்</guibutton> பொத்தானை சொடுக்கவும். "
+"பின் உங்கள் ஆவணத்திற்கு சென்று <menuchoice><guimenu>திருத்து</"
+"guimenu><guimenuitem>ஒட்டு</guimenuitem></menuchoice> என்பதை "
+"<application>gedit</application> மெனு பட்டையில் தேர்ந்தெடுக்கவும். "
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
@@ -239,7 +247,8 @@ msgstr ""
 "<application><replaceable>Proportional Bold Italic</replaceable></"
 "application>"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
@@ -321,7 +330,8 @@ msgstr "Publican என்பது ஒரு <firstterm>DocBook</firstterm> வ
 msgid "Pull-quote Conventions"
 msgstr "புல்-கோட் பெயரிடல்கள்"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
@@ -329,7 +339,8 @@ msgstr ""
 "முனைய வெளிப்பாடு மற்றும் மூலக்குறியீடு பட்டியல்கள் சுற்றியுள்ள உரையிலிருந்து பார்வை "
 "நீக்கப்படுகிறது."
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
@@ -337,13 +348,15 @@ msgstr ""
 "ஒரு முனையத்திற்கு அனுப்பப்பட்ட வெளிப்பாடு <computeroutput>Mono-spaced Roman</"
 "computeroutput> இல் அமைப்பட்ட அங்கிருக்கும்:"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"மூலக்குறியீடு பட்டியலிடப்பட்டிருப்பதும் <computeroutput>Mono-spaced Roman</computeroutput>"
-"இல் அமைக்கப்பட்டிருக்கும் ஆனால் பின்வருவது போல இலக்கண முன்னிலைப்படுத்தப்பட்டிருக்கும்:"
+"மூலக்குறியீடு பட்டியலிடப்பட்டிருப்பதும் <computeroutput>Mono-spaced Roman</"
+"computeroutput>இல் அமைக்கப்பட்டிருக்கும் ஆனால் பின்வருவது போல இலக்கண "
+"முன்னிலைப்படுத்தப்பட்டிருக்கும்:"
 
 #. Tag: title
 #, no-c-format
@@ -364,7 +377,8 @@ msgstr ""
 msgid "Note"
 msgstr "குறிப்பு"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
@@ -379,7 +393,8 @@ msgstr ""
 msgid "Important"
 msgstr "முக்கியமானது"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
@@ -396,7 +411,8 @@ msgstr ""
 msgid "Warning"
 msgstr "எச்சரிக்கை"
 
-#. Tag: para, no-c-format
+#. Tag: para
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
