--- a/publican/datadir/Common_Content/common/zh-CN/Conventions.po
+++ b/publican/datadir/Common_Content/common/zh-CN/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2009-12-01T23:44:40\n"
+"POT-Creation-Date: 2010-02-26T01:37:23\n"
 "PO-Revision-Date: 2009-12-02 21:25+1000\n"
 "Last-Translator: Leah Liu <lliu@redhat.com>\n"
 "Language-Team: Simplified Chinese <zh@li.org>\n"
@@ -122,8 +122,8 @@ msgid ""
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
-"第一段突出的是要按的特定按键。第二段突出了两个按键组合（每个组合都要同时按）。"
-"下。"
+"第一段突出的是要按的特定按键。第二段突出了两个按键组合（每个组合都要同时"
+"按）。下。"
 
 #. Tag: para
 #, no-c-format
@@ -163,21 +163,21 @@ msgstr ""
 "钮、复选框以及单选按钮标签、菜单标题以及子菜单标题。例如："
 
 #. Tag: para
-#, no-c-format
+#, fuzzy, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
 "bar to launch <application>Mouse Preferences</application>. In the "
 "<guilabel>Buttons</guilabel> tab, click the <guilabel>Left-handed mouse</"
-"guilabel> check box and click <guibutton>Close to switch the "
+"guilabel> check box and click <guibutton>Close</guibutton> to switch the "
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"在主菜单条中选择<menuchoice><guimenu>「系统」</guimenu><guisubmenu>「首选项」</"
-"guisubmenu><guimenuitem>「鼠标」</guimenuitem></menuchoice>启动  <application>鼠标首选项</application>。在"
-"<guilabel>「按钮」</guilabel>标签中点击<guilabel>「惯用左手鼠标」 </"
-"guilabel>复选框并点击  <guibutton>关闭</guibutton>切换到"
-"主鼠标按钮从左向右（让鼠标适合左手使用）。"
+"在主菜单条中选择<menuchoice><guimenu>「系统」</guimenu><guisubmenu>「首选项」"
+"</guisubmenu><guimenuitem>「鼠标」</guimenuitem></menuchoice>启动  "
+"<application>鼠标首选项</application>。在<guilabel>「按钮」</guilabel>标签中"
+"点击<guilabel>「惯用左手鼠标」 </guilabel>复选框并点击  <guibutton>关闭</"
+"guibutton>切换到主鼠标按钮从左向右（让鼠标适合左手使用）。"
 
 #. Tag: para
 #, no-c-format
@@ -196,9 +196,17 @@ msgid ""
 "document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
-"要在 <application>gedit</application> 文件中插入一个特殊字符，请在主菜单中选择"
-"<menuchoice><guimenu>「应用程序」</guimenu><guisubmenu>「附件」</"
-"guisubmenu><guimenuitem>「字符映射表」</guimenuitem></menuchoice>。下一步在 <application>字符映射表</application>菜单条中选择<menuchoice><guimenu>「搜索」</guimenu><guimenuitem>「查找」</guimenuitem></menuchoice>，在<guilabel>「搜索」</guilabel>字段输入字符名称并点击 <guibutton>下一个</guibutton> 按钮。您输入的字符会在<guilabel>「字符表」</guilabel>中突出出来。双击这个突出的字符将其放入<guilabel>「要复制的文本」</guilabel>字段，然后点击 <guibutton>复制</guibutton> 按钮。现在切换回您的文档并在 <application>gedit</application> 菜单条中选择<menuchoice><guimenu>「编辑」</guimenu><guimenuitem>「粘贴」</guimenuitem></menuchoice>。"
+"要在 <application>gedit</application> 文件中插入一个特殊字符，请在主菜单中选"
+"择<menuchoice><guimenu>「应用程序」</guimenu><guisubmenu>「附件」</"
+"guisubmenu><guimenuitem>「字符映射表」</guimenuitem></menuchoice>。下一步在 "
+"<application>字符映射表</application>菜单条中选择<menuchoice><guimenu>「搜"
+"索」</guimenu><guimenuitem>「查找」</guimenuitem></menuchoice>，在<guilabel>"
+"「搜索」</guilabel>字段输入字符名称并点击 <guibutton>下一个</guibutton> 按"
+"钮。您输入的字符会在<guilabel>「字符表」</guilabel>中突出出来。双击这个突出的"
+"字符将其放入<guilabel>「要复制的文本」</guilabel>字段，然后点击 <guibutton>复"
+"制</guibutton> 按钮。现在切换回您的文档并在 <application>gedit</application> "
+"菜单条中选择<menuchoice><guimenu>「编辑」</guimenu><guimenuitem>「粘贴」</"
+"guimenuitem></menuchoice>。"
 
 #. Tag: para
 #, no-c-format
@@ -286,7 +294,8 @@ msgstr ""
 msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
-msgstr "不考虑工作中显示标题的标准用法，斜体表示第一次使用某个新且重要的用语。例如："
+msgstr ""
+"不考虑工作中显示标题的标准用法，斜体表示第一次使用某个新且重要的用语。例如："
 
 #. Tag: para
 #, no-c-format
@@ -320,7 +329,8 @@ msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"源码列表也设为 <computeroutput>Mono-spaced Roman</computeroutput>，但添加下面突出的语法："
+"源码列表也设为 <computeroutput>Mono-spaced Roman</computeroutput>，但添加下面"
+"突出的语法："
 
 #. Tag: title
 #, no-c-format
@@ -376,4 +386,3 @@ msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr "警告是不应被忽略的。忽略警告信息很可能导致数据丢失。"
-
