--- a/publican/datadir/Common_Content/common/pa-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/pa-IN/Conventions.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2009-12-01T23:44:40\n"
+"POT-Creation-Date: 2010-02-26T01:37:23\n"
 "PO-Revision-Date: 2009-12-02 13:33+0530\n"
 "Last-Translator: Jaswinder Singh <jsingh@redhat.com>\n"
 "Language-Team: Punjabi/Panjabi <kde-i18n-doc@kde.org>\n"
@@ -25,8 +25,8 @@ msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
 msgstr ""
-"ਇਹ ਦਸਤਾਵੇਜ਼ ਕੁਝ ਸ਼ਬਦਾਂ ਅਤੇ ਪੈਰ੍ਹਿਆਂ ਨੂੰ ਹਾਈਲਾਈਟ ਕਰਨ ਲਈ ਕਈ ਕੰਨਵੈਂਸ਼ਮਨਜ਼ ਵਰਤਦਾ ਹੈ "
-"ਅਤੇ ਖਾਸ ਜਾਣਕਾਰੀ ਵੇਖਾਉਂਦਾ ਹੈ।"
+"ਇਹ ਦਸਤਾਵੇਜ਼ ਕੁਝ ਸ਼ਬਦਾਂ ਅਤੇ ਪੈਰ੍ਹਿਆਂ ਨੂੰ ਹਾਈਲਾਈਟ ਕਰਨ ਲਈ ਕਈ ਕੰਨਵੈਂਸ਼ਮਨਜ਼ ਵਰਤਦਾ ਹੈ ਅਤੇ ਖਾਸ "
+"ਜਾਣਕਾਰੀ ਵੇਖਾਉਂਦਾ ਹੈ।"
 
 #. Tag: para
 #, no-c-format
@@ -38,14 +38,14 @@ msgid ""
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
 msgstr ""
-"PDF ਅਤੇ ਪੇਪਰ ਐਡੀਸ਼ਨ ਵਿੱਚ, ਇਹ ਦਸਤਾਵੇਜ਼ ਟਾਈਪਫੇਸ ਵਰਤਦਾ ਹੈ ਜੋ <ulink "
-"url=\"https://fedorahosted.org/liberation-fonts/\">Liberation Fonts</ulink> "
-"ਸੈੱਟ ਤੋਂ ਲਏ ਗਏ ਹਨ। ਲਿਬਰੇਸ਼ਂ ਫੌਂਟ ਸੈੱਟ ਨੂੰ HTML ਐਡੀਸ਼ਨਾਂ ਵਿੱਚ ਵੀ ਵਰਤਿਆ ਜਾਂਦਾ ਹੈ "
-"ਜੇ ਸੈੱਟ ਤੁਹਾਡੇ ਸਿਸਟਮ ਤੇ ਇੰਸਟਾਲ ਕੀਤਾ ਹੈ। ਜੇ ਨਹੀਂ, ਮਿਲਦੇ-ਜੁਲਦੇ ਟਾਈਪਫੇਸ ਵੇਖਾਏ "
-"ਜਾਂਦੇ ਹਨ। ਸੂਚਨਾ: Red Hat Enterprise Linux 5 ਅਤੇ ਬਾਅਦ ਵਾਲਿਆਂ ਵਿੱਚ ਮੂਲ ਹੀ "
-"ਲਿਬਰੇਸ਼ਨ ਫੌਂਟ ਸ਼ਾਮਿਲ ਹੁੰਦੇ ਹਨ।"
+"PDF ਅਤੇ ਪੇਪਰ ਐਡੀਸ਼ਨ ਵਿੱਚ, ਇਹ ਦਸਤਾਵੇਜ਼ ਟਾਈਪਫੇਸ ਵਰਤਦਾ ਹੈ ਜੋ <ulink url=\"https://"
+"fedorahosted.org/liberation-fonts/\">Liberation Fonts</ulink> ਸੈੱਟ ਤੋਂ ਲਏ ਗਏ ਹਨ। "
+"ਲਿਬਰੇਸ਼ਂ ਫੌਂਟ ਸੈੱਟ ਨੂੰ HTML ਐਡੀਸ਼ਨਾਂ ਵਿੱਚ ਵੀ ਵਰਤਿਆ ਜਾਂਦਾ ਹੈ ਜੇ ਸੈੱਟ ਤੁਹਾਡੇ ਸਿਸਟਮ ਤੇ ਇੰਸਟਾਲ ਕੀਤਾ "
+"ਹੈ। ਜੇ ਨਹੀਂ, ਮਿਲਦੇ-ਜੁਲਦੇ ਟਾਈਪਫੇਸ ਵੇਖਾਏ ਜਾਂਦੇ ਹਨ। ਸੂਚਨਾ: Red Hat Enterprise Linux 5 ਅਤੇ "
+"ਬਾਅਦ ਵਾਲਿਆਂ ਵਿੱਚ ਮੂਲ ਹੀ ਲਿਬਰੇਸ਼ਨ ਫੌਂਟ ਸ਼ਾਮਿਲ ਹੁੰਦੇ ਹਨ।"
 
-#. Tag: title, no-c-format
+#. Tag: title
+#, no-c-format
 msgid "Typographic Conventions"
 msgstr "ਟਾਈਪੋਗਰਾਫਿਕ ਕੰਨਵੈਂਸ਼ਨਜ਼"
 
@@ -56,8 +56,8 @@ msgid ""
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
 msgstr ""
-"ਚਾਰ ਟਾਈਪੋਗਰਾਫਿਕ ਕੰਨਵੈਂਸ਼ਨਜ਼ ਖਾਸ ਸ਼ਬਦ ਅਤੇ ਪੈਰ੍ਹੇ ਨੂੰ ਵੇਖਾਉਣ ਲਈ ਵਰਤੀਆਂ ਜਾਂਦੀਆਂ "
-"ਹਨ। ਇਹ ਕੰਨਵੈਂਸ਼ਨਾਂ, ਅਤੇ ਹਾਲਤਾਂ ਜਿਨਾਂ ਵਿੱਚ ਇਹ ਲਾਗੂ ਹੁੰਦੀਆਂ ਹਨ, ਇਸ ਤਰਾਂ ਹਨ।"
+"ਚਾਰ ਟਾਈਪੋਗਰਾਫਿਕ ਕੰਨਵੈਂਸ਼ਨਜ਼ ਖਾਸ ਸ਼ਬਦ ਅਤੇ ਪੈਰ੍ਹੇ ਨੂੰ ਵੇਖਾਉਣ ਲਈ ਵਰਤੀਆਂ ਜਾਂਦੀਆਂ ਹਨ। ਇਹ ਕੰਨਵੈਂਸ਼ਨਾਂ, "
+"ਅਤੇ ਹਾਲਤਾਂ ਜਿਨਾਂ ਵਿੱਚ ਇਹ ਲਾਗੂ ਹੁੰਦੀਆਂ ਹਨ, ਇਸ ਤਰਾਂ ਹਨ।"
 
 #. Tag: para
 #, no-c-format
@@ -70,8 +70,8 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
-"ਸਿਸਟਮ ਇੰਪੁੱਟ, ਜਿਵੇਂ ਸ਼ੈੱਲ ਕਮਾਂਡਾਂ, ਫਾਇਲ ਨਾਂ ਅਤੇ ਟਿਕਾਣੇ ਆਦਿ ਨੂੰ ਵੇਖਾਉਣ ਲਈ ਵਰਤੀ "
-"ਜਾਂਦੀ ਹੈ। ਕੀਕੈਪਸ ਅਤੇ ਕੀ-ਸੰਜੋਗ ਵੇਖਾਉਣ ਲਈ ਵੀ ਵਰਤੀ ਜਾਂਦੀ ਹੈ। ਉਦਾਹਰਨ ਲਈ:"
+"ਸਿਸਟਮ ਇੰਪੁੱਟ, ਜਿਵੇਂ ਸ਼ੈੱਲ ਕਮਾਂਡਾਂ, ਫਾਇਲ ਨਾਂ ਅਤੇ ਟਿਕਾਣੇ ਆਦਿ ਨੂੰ ਵੇਖਾਉਣ ਲਈ ਵਰਤੀ ਜਾਂਦੀ ਹੈ। ਕੀਕੈਪਸ "
+"ਅਤੇ ਕੀ-ਸੰਜੋਗ ਵੇਖਾਉਣ ਲਈ ਵੀ ਵਰਤੀ ਜਾਂਦੀ ਹੈ। ਉਦਾਹਰਨ ਲਈ:"
 
 #. Tag: para
 #, no-c-format
@@ -81,10 +81,9 @@ msgid ""
 "my_next_bestselling_novel</command> command at the shell prompt and press "
 "<keycap>Enter</keycap> to execute the command."
 msgstr ""
-"ਤੁਹਾਡੀ ਮੌਜੂਦਾ ਵਰਕਿੰਗ ਡਾਇਰੈਕਟਰੀ ਵਿੱਚ <filename>my_next_bestselling_novel</"
-"filename> ਫਾਇਲ ਦੇ ਸੰਖੇਪ ਵੇਖਣ ਲਈ, ਸ਼ੈੱਲ ਪਰੌਂਪਟ ਤੇ <command>cat "
-"my_next_bestselling_novel</command> ਦਿਓ ਅਤੇ ਕਮਾਂਡ ਚਲਾਉਣ ਲਈ <keycap>Enter<"
-"/keycap> ਦਬਾਓ।"
+"ਤੁਹਾਡੀ ਮੌਜੂਦਾ ਵਰਕਿੰਗ ਡਾਇਰੈਕਟਰੀ ਵਿੱਚ <filename>my_next_bestselling_novel</filename> "
+"ਫਾਇਲ ਦੇ ਸੰਖੇਪ ਵੇਖਣ ਲਈ, ਸ਼ੈੱਲ ਪਰੌਂਪਟ ਤੇ <command>cat my_next_bestselling_novel</"
+"command> ਦਿਓ ਅਤੇ ਕਮਾਂਡ ਚਲਾਉਣ ਲਈ <keycap>Enter</keycap> ਦਬਾਓ।"
 
 #. Tag: para
 #, no-c-format
@@ -92,8 +91,8 @@ msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
-"ਉੱਪਰ ਫਾਇਲ ਨਾਂ, ਇੱਕ ਸ਼ੈੱਲ ਕਮਾਂਡ ਅਤੇ ਕੀਕੈਪ ਦਿੱਤੇ ਗਏ ਹਨ, ਸਭ ਮੋਨੋ-ਸਪੇਸ ਬੋਲਡ ਵਿੱਚ "
-"ਦਿੱਤੇ ਗਏ ਹਨ ਅਤੇ ਸਭ ਪ੍ਰਸੰਗ ਸਾਹਿਤ ਦਿੱਤੇ ਹਨ।"
+"ਉੱਪਰ ਫਾਇਲ ਨਾਂ, ਇੱਕ ਸ਼ੈੱਲ ਕਮਾਂਡ ਅਤੇ ਕੀਕੈਪ ਦਿੱਤੇ ਗਏ ਹਨ, ਸਭ ਮੋਨੋ-ਸਪੇਸ ਬੋਲਡ ਵਿੱਚ ਦਿੱਤੇ ਗਏ ਹਨ ਅਤੇ ਸਭ "
+"ਪ੍ਰਸੰਗ ਸਾਹਿਤ ਦਿੱਤੇ ਹਨ।"
 
 #. Tag: para
 #, no-c-format
@@ -101,8 +100,8 @@ msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
 msgstr ""
-"ਕੁੰਜੀ ਸੰਜੋਗ ਨੂੰ ਕੀਕੈਪ ਤੋਂ ਵੱਖ ਕਰਨ ਲਈ ਕੁੰਜੀ ਸੰਜੋਗ ਦੇ ਹਰੇਕ ਹਿੱਸੇ ਵਿੱਚ ਹਾਈਫਨ "
-"ਦਿੱਤਾ ਜਾ ਸਕਦਾ ਹੈ। ਉਦਾਹਰਨ ਲਈ:"
+"ਕੁੰਜੀ ਸੰਜੋਗ ਨੂੰ ਕੀਕੈਪ ਤੋਂ ਵੱਖ ਕਰਨ ਲਈ ਕੁੰਜੀ ਸੰਜੋਗ ਦੇ ਹਰੇਕ ਹਿੱਸੇ ਵਿੱਚ ਹਾਈਫਨ ਦਿੱਤਾ ਜਾ ਸਕਦਾ ਹੈ। "
+"ਉਦਾਹਰਨ ਲਈ:"
 
 #. Tag: para
 #, no-c-format
@@ -117,10 +116,9 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"ਪਹਿਲੇ ਵਰਚੁਅਲ ਟਰਮੀਨਲ ਤੇ ਜਾਣ ਲਈ <keycombo><keycap>Ctrl</keycap><keycap>Alt<"
-"/keycap><keycap>F1</"
-"keycap></keycombo> ਦਬਾਓ। ਆਪਣੇ X-ਵਿੰਡੋ ਸ਼ੈਸ਼ਨ ਤੇ ਵਾਪਿਸ ਜਾਣ ਲਈ <keycombo><keycap>"
-"Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"ਪਹਿਲੇ ਵਰਚੁਅਲ ਟਰਮੀਨਲ ਤੇ ਜਾਣ ਲਈ <keycombo><keycap>Ctrl</keycap><keycap>Alt</"
+"keycap><keycap>F1</keycap></keycombo> ਦਬਾਓ। ਆਪਣੇ X-ਵਿੰਡੋ ਸ਼ੈਸ਼ਨ ਤੇ ਵਾਪਿਸ ਜਾਣ ਲਈ "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
 "keycombo> ਦਬਾਓ।"
 
 #. Tag: para
@@ -130,8 +128,8 @@ msgid ""
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
-"ਪਹਿਲਾ ਪੈਰ੍ਹਾ ਖਾਸ ਕੀਕੈਪ ਨੂੰ ਵੇਖਾਉਂਦਾ ਹੈ ਜੋ ਦਬਾਉਣਾ ਹੈ। ਦੂਜਾ ਦੋ ਕੁੰਜੀ ਸੰਜੋਗਾਂ "
-"ਨੂੰ ਵੇਖਾਉਂਦਾ ਹੈ (ਹਰੇਕ ਤਿੰਨ ਕੀਕੈਪਾਂ ਦਾ ਸੈੱਟ ਹੈ ਜੋ ਇੱਕੋ ਸਮੇਂ ਦਬਾਉਣੀਆਂ ਹਨ)।"
+"ਪਹਿਲਾ ਪੈਰ੍ਹਾ ਖਾਸ ਕੀਕੈਪ ਨੂੰ ਵੇਖਾਉਂਦਾ ਹੈ ਜੋ ਦਬਾਉਣਾ ਹੈ। ਦੂਜਾ ਦੋ ਕੁੰਜੀ ਸੰਜੋਗਾਂ ਨੂੰ ਵੇਖਾਉਂਦਾ ਹੈ (ਹਰੇਕ "
+"ਤਿੰਨ ਕੀਕੈਪਾਂ ਦਾ ਸੈੱਟ ਹੈ ਜੋ ਇੱਕੋ ਸਮੇਂ ਦਬਾਉਣੀਆਂ ਹਨ)।"
 
 #. Tag: para
 #, no-c-format
@@ -140,9 +138,8 @@ msgid ""
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>mono-spaced bold</literal>. For example:"
 msgstr ""
-"ਜੇ ਸੋਰਸ ਕੋਡ ਦਿੱਤਾ ਹੈ, ਕਲਾਸ ਨਾਂ, ਢੰਗ, ਫੰਕਸ਼ਨ, ਵੇਰੀਏਬਲ ਨਾਂ ਅਤੇ ਪੈਰ੍ਹੇ ਵਿੱਚ "
-"ਰਿਟਰਨ ਕੀਤੇ ਮੁੱਲ ਉੱਪਰ ਦਿੱਤੇ ਵਾਂਗ ਵੇਖਾਏ ਜਾਣਗੇ, "
-"<literal>ਮੋਨੋ-ਸਪੇਸ ਬੋਲਡ</literal> ਵਿੱਚ। ਉਦਾਹਰਨ ਲਈ:"
+"ਜੇ ਸੋਰਸ ਕੋਡ ਦਿੱਤਾ ਹੈ, ਕਲਾਸ ਨਾਂ, ਢੰਗ, ਫੰਕਸ਼ਨ, ਵੇਰੀਏਬਲ ਨਾਂ ਅਤੇ ਪੈਰ੍ਹੇ ਵਿੱਚ ਰਿਟਰਨ ਕੀਤੇ ਮੁੱਲ ਉੱਪਰ "
+"ਦਿੱਤੇ ਵਾਂਗ ਵੇਖਾਏ ਜਾਣਗੇ, <literal>ਮੋਨੋ-ਸਪੇਸ ਬੋਲਡ</literal> ਵਿੱਚ। ਉਦਾਹਰਨ ਲਈ:"
 
 #. Tag: para
 #, no-c-format
@@ -152,9 +149,9 @@ msgid ""
 "classname> for directories. Each class has its own associated set of "
 "permissions."
 msgstr ""
-"ਫਾਇਲ-ਸੰਬੰਧੀ ਕਲਾਸਾਂ ਵਿੱਚ ਫਾਇਲ ਸਿਸਟਮਾਂ ਲਈ <classname>filesystem</classname>, "
-"ਫਾਇਲਾਂ ਲਈ <classname>file</classname>, ਅਤੇ ਡਾਇਰੈਕਟਰੀਆਂ ਲਈ <classname>dir</"
-"classname> ਸ਼ਾਮਿਲ ਹਨ। ਹਰੇਕ ਕਲਾਸ ਦੇ ਆਪਣੇ ਸੰਬੰਧਿਤ ਅਧਿਕਾਰ ਹੁੰਦੇ ਹਨ।"
+"ਫਾਇਲ-ਸੰਬੰਧੀ ਕਲਾਸਾਂ ਵਿੱਚ ਫਾਇਲ ਸਿਸਟਮਾਂ ਲਈ <classname>filesystem</classname>, ਫਾਇਲਾਂ "
+"ਲਈ <classname>file</classname>, ਅਤੇ ਡਾਇਰੈਕਟਰੀਆਂ ਲਈ <classname>dir</classname> "
+"ਸ਼ਾਮਿਲ ਹਨ। ਹਰੇਕ ਕਲਾਸ ਦੇ ਆਪਣੇ ਸੰਬੰਧਿਤ ਅਧਿਕਾਰ ਹੁੰਦੇ ਹਨ।"
 
 #. Tag: para
 #, no-c-format
@@ -183,12 +180,12 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"<application>ਮਾਊਸ ਪਸੰਦਾਂ</application> ਚਲਾਉਣ ਲਈ ਮੁੱਖ ਮੇਨੂ ਬਾਰ ਵਿੱਚੋਂ <"
-"menuchoice><guimenu>ਸਿਸਟਮ</guimenu><guisubmenu>ਪਸੰਦਾਂ</"
-"guisubmenu><guimenuitem>ਮਾਊਸ</guimenuitem></menuchoice> ਚੁਣੋ। <guilabel>ਬਟਨ<"
-"/guilabel> ਟੈਬ ਵਿੱਚ, <guilabel>ਖੱਬਾ-ਹੱਥ ਮਾਊਸ</"
-"guilabel> ਚੈੱਕ ਬਕਸਾ ਦਬਾਓ ਅਤੇ ਪਰਾਇਮਰੀ ਮਾਊਸ ਬਟਨ ਨੂੰ ਖੱਬੇ ਤੋਂ ਸੱਜੇ ਤਬਦੀਲ ਕਰਨ ਲਈ "
-"<guibutton>ਬੰਦ</guibutton> ਦਬਾਓ (ਖੱਬੂ ਦੇ ਵਰਤਣ ਲਈ ਮਾਊਸ ਬਣਾਉਣਾ)।"
+"<application>ਮਾਊਸ ਪਸੰਦਾਂ</application> ਚਲਾਉਣ ਲਈ ਮੁੱਖ ਮੇਨੂ ਬਾਰ ਵਿੱਚੋਂ "
+"<menuchoice><guimenu>ਸਿਸਟਮ</guimenu><guisubmenu>ਪਸੰਦਾਂ</"
+"guisubmenu><guimenuitem>ਮਾਊਸ</guimenuitem></menuchoice> ਚੁਣੋ। <guilabel>ਬਟਨ</"
+"guilabel> ਟੈਬ ਵਿੱਚ, <guilabel>ਖੱਬਾ-ਹੱਥ ਮਾਊਸ</guilabel> ਚੈੱਕ ਬਕਸਾ ਦਬਾਓ ਅਤੇ ਪਰਾਇਮਰੀ "
+"ਮਾਊਸ ਬਟਨ ਨੂੰ ਖੱਬੇ ਤੋਂ ਸੱਜੇ ਤਬਦੀਲ ਕਰਨ ਲਈ <guibutton>ਬੰਦ</guibutton> ਦਬਾਓ (ਖੱਬੂ ਦੇ ਵਰਤਣ ਲਈ "
+"ਮਾਊਸ ਬਣਾਉਣਾ)।"
 
 #. Tag: para
 #, no-c-format
@@ -207,20 +204,17 @@ msgid ""
 "document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
-"ਇੱਕ <application>ਸੰਪਾਦਕ</application> ਫਾਇਲ ਵਿੱਚ ਖਾਸ ਅੱਖਰ ਸ਼ਾਮਿਲ ਕਰਨ ਲਈ, ਮੁੱਖ "
-"ਮੇਨੂ ਬਾਰ ਵਿੱਚੋਂ"
-"<menuchoice><guimenu>ਐਪਲੀਕੇਸ਼ਨ</guimenu><guisubmenu>ਸਹਾਇਕ</"
-"guisubmenu><guimenuitem>ਅੱਖਰ ਮੈਪ</guimenuitem></menuchoice> ਚੁਣੋ। ਅੱਗੇ, <"
-"menuchoice><guimenu>ਖੇਜ</"
-"guimenu><guimenuitem>ਖੋਜ&hellip;</guimenuitem></menuchoice> ਨੂੰ <application>"
-"ਅੱਖਰ ਮੈਪ</application> ਮੇਨੂ ਬਾਰ ਵਿੱਚੋਂ ਚੁਣੋ, <guilabel>ਖੋਜ</guilabel> ਖੇਤਰ "
-"ਵਿੱਚ ਅੱਕਰ ਦਾ ਨਾਂ ਦਿਓ ਅਤੇ <guibutton>ਅੱਗੇ</guibutton> ਦਬਾਓ। ਅੱਖਰ ਜੋ ਤੁਸੀਂ "
-"ਵੇਖੇ <guilabel>ਅੱਖਰ ਟੇਬਲ</guilabel> ਵਿੱਚ ਵੇਖਾਏ ਜਾਣਗੇ। ਇਸ ਵੇਖਾਏ ਗੇ ਅੱਖਰ ਨੂੰ <"
-"guilabel>ਨਕਲ ਲਈ ਪਾਠ</guilabel> ਖੇਤਰ ਵਿੱਚ ਲਿਖਣ ਲਈ ਡਬਲ-ਕਲਿੱਕ ਕਰੋ ਅਤੇ ਫਿਰ <"
-"guibutton>ਨਕਲ</guibutton> ਬਟਨ ਦਬਾਓ। ਹੁਣ ਪਿੱਛੇ ਆਪਣੇ ਦਸਤਾਵੇਜ਼ ਵਿੱਚ ਜਾਓ ਅਤੇ <"
-"menuchoice><guimenu>ਸੋਧ</guimenu><guimenuitem>ਚੇਪੋ</"
-"guimenuitem></menuchoice> ਨੂੰ <application>ਸੰਪਾਦਕ</application> ਮੇਨੂ ਬਾਰ "
-"ਵਿੱਚੋਂ ਚੁਣੋ।"
+"ਇੱਕ <application>ਸੰਪਾਦਕ</application> ਫਾਇਲ ਵਿੱਚ ਖਾਸ ਅੱਖਰ ਸ਼ਾਮਿਲ ਕਰਨ ਲਈ, ਮੁੱਖ ਮੇਨੂ ਬਾਰ "
+"ਵਿੱਚੋਂ<menuchoice><guimenu>ਐਪਲੀਕੇਸ਼ਨ</guimenu><guisubmenu>ਸਹਾਇਕ</"
+"guisubmenu><guimenuitem>ਅੱਖਰ ਮੈਪ</guimenuitem></menuchoice> ਚੁਣੋ। ਅੱਗੇ, "
+"<menuchoice><guimenu>ਖੇਜ</guimenu><guimenuitem>ਖੋਜ&hellip;</guimenuitem></"
+"menuchoice> ਨੂੰ <application>ਅੱਖਰ ਮੈਪ</application> ਮੇਨੂ ਬਾਰ ਵਿੱਚੋਂ ਚੁਣੋ, <guilabel>ਖੋਜ</"
+"guilabel> ਖੇਤਰ ਵਿੱਚ ਅੱਕਰ ਦਾ ਨਾਂ ਦਿਓ ਅਤੇ <guibutton>ਅੱਗੇ</guibutton> ਦਬਾਓ। ਅੱਖਰ ਜੋ ਤੁਸੀਂ "
+"ਵੇਖੇ <guilabel>ਅੱਖਰ ਟੇਬਲ</guilabel> ਵਿੱਚ ਵੇਖਾਏ ਜਾਣਗੇ। ਇਸ ਵੇਖਾਏ ਗੇ ਅੱਖਰ ਨੂੰ <guilabel>ਨਕਲ "
+"ਲਈ ਪਾਠ</guilabel> ਖੇਤਰ ਵਿੱਚ ਲਿਖਣ ਲਈ ਡਬਲ-ਕਲਿੱਕ ਕਰੋ ਅਤੇ ਫਿਰ <guibutton>ਨਕਲ</"
+"guibutton> ਬਟਨ ਦਬਾਓ। ਹੁਣ ਪਿੱਛੇ ਆਪਣੇ ਦਸਤਾਵੇਜ਼ ਵਿੱਚ ਜਾਓ ਅਤੇ <menuchoice><guimenu>ਸੋਧ</"
+"guimenu><guimenuitem>ਚੇਪੋ</guimenuitem></menuchoice> ਨੂੰ <application>ਸੰਪਾਦਕ</"
+"application> ਮੇਨੂ ਬਾਰ ਵਿੱਚੋਂ ਚੁਣੋ।"
 
 #. Tag: para
 #, no-c-format
@@ -230,9 +224,9 @@ msgid ""
 "interface, all presented in proportional bold and all distinguishable by "
 "context."
 msgstr ""
-"ਉੱਪਰਲੇ ਪਾਠ ਵਿੱਚ ਐਪਲੀਕੇਸ਼ਨ ਨਾਂ; ਸਿਸਟਮ-ਸੰਬੰਧੀ ਮੇਨੂ ਨਾਂ ਅਤੇ ਇਕਾਈਆਂ; "
-"ਐਪਲੀਕੇਸ਼ਨ-ਸੰਬੰਧੀ ਮੇਨੂ ਨਾਂ; ਅਤੇ ਬਟਨ ਅਤੇ GUI ਇੰਟਰਫੇਸ ਵਿਚਲਾ ਪਾਠ ਸ਼ਾਮਿਲ ਹੁੰਦੇ ਹਨ, "
-"ਸਭ ਪਰੋਪੋਰਸ਼ਨਲ ਬੋਲਡ ਵਿੱਚ ਵੇਖਾਂਦੇ ਹੁੰਦੇ ਹਨ ਅਤੇ ਪ੍ਰਸੰਗ ਸਾਹਿਤ ਵੱਖ ਕੀਤੇ ਹੁੰਦੇ ਹਨ।"
+"ਉੱਪਰਲੇ ਪਾਠ ਵਿੱਚ ਐਪਲੀਕੇਸ਼ਨ ਨਾਂ; ਸਿਸਟਮ-ਸੰਬੰਧੀ ਮੇਨੂ ਨਾਂ ਅਤੇ ਇਕਾਈਆਂ; ਐਪਲੀਕੇਸ਼ਨ-ਸੰਬੰਧੀ ਮੇਨੂ ਨਾਂ; ਅਤੇ "
+"ਬਟਨ ਅਤੇ GUI ਇੰਟਰਫੇਸ ਵਿਚਲਾ ਪਾਠ ਸ਼ਾਮਿਲ ਹੁੰਦੇ ਹਨ, ਸਭ ਪਰੋਪੋਰਸ਼ਨਲ ਬੋਲਡ ਵਿੱਚ ਵੇਖਾਂਦੇ ਹੁੰਦੇ ਹਨ ਅਤੇ "
+"ਪ੍ਰਸੰਗ ਸਾਹਿਤ ਵੱਖ ਕੀਤੇ ਹੁੰਦੇ ਹਨ।"
 
 #. Tag: para
 #, no-c-format
@@ -242,8 +236,7 @@ msgid ""
 "application>"
 msgstr ""
 "<command><replaceable>Mono-spaced Bold Italic</replaceable></command> ਜਾਂ "
-"<application><replaceable>ਪਰੋਪੋਰਸ਼ਨਲ ਬੋਲਡ ਇਟਾਲਿਕ</replaceable></"
-"application>"
+"<application><replaceable>ਪਰੋਪੋਰਸ਼ਨਲ ਬੋਲਡ ਇਟਾਲਿਕ</replaceable></application>"
 
 #. Tag: para
 #, no-c-format
@@ -253,9 +246,9 @@ msgid ""
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
-"ਮੋਨੋ-ਸਪੇਸ ਬੋਲਡ ਜਾਂ ਪਰੋਪੋਰਸ਼ਨਲ ਬੋਲਟ ਹੋਵੇ, ਇਟਾਲਿਕ ਸ਼ਾਮਿਲ ਕਰਨ ਨਾਲ ਹਟਾਉਣ ਯੋਗ ਜਾਂ "
-"ਤਬਦੀਲੀ ਯੋਗ ਪਾਠ ਦਿਸਦਾ ਹੈ। ਇਟਾਲਿਕ ਉਹ ਪਾਠ ਹੈ ਜੋ ਤੁਸੀਂ ਇੰਪੁੱਟ ਨਹੀਂ ਕੀਤਾ ਜਾਂ ਪਾਠ "
-"ਵੇਖਾਉਂਦਾ ਹੈ ਜੋ ਤਬਦੀਲ ਹੋਇਆ ਹੈ ਹਾਲਤ ਤੇ ਨਿਰਭਰ ਕਰਦਾ ਹੈ। ਉਦਾਹਰਨ ਲਈ:"
+"ਮੋਨੋ-ਸਪੇਸ ਬੋਲਡ ਜਾਂ ਪਰੋਪੋਰਸ਼ਨਲ ਬੋਲਟ ਹੋਵੇ, ਇਟਾਲਿਕ ਸ਼ਾਮਿਲ ਕਰਨ ਨਾਲ ਹਟਾਉਣ ਯੋਗ ਜਾਂ ਤਬਦੀਲੀ ਯੋਗ ਪਾਠ "
+"ਦਿਸਦਾ ਹੈ। ਇਟਾਲਿਕ ਉਹ ਪਾਠ ਹੈ ਜੋ ਤੁਸੀਂ ਇੰਪੁੱਟ ਨਹੀਂ ਕੀਤਾ ਜਾਂ ਪਾਠ ਵੇਖਾਉਂਦਾ ਹੈ ਜੋ ਤਬਦੀਲ ਹੋਇਆ ਹੈ "
+"ਹਾਲਤ ਤੇ ਨਿਰਭਰ ਕਰਦਾ ਹੈ। ਉਦਾਹਰਨ ਲਈ:"
 
 #. Tag: para
 #, no-c-format
@@ -268,9 +261,8 @@ msgid ""
 msgstr ""
 "ssh ਵਰਤ ਕੇ ਰਿਮੋਟ ਮਸ਼ੀਨ ਨਾਲ ਜੁੜਨ ਲਈ, ਸ਼ੈੱਲ ਪਰੌਂਪਟ ਤੇ <command>ssh "
 "<replaceable>username</replaceable>@<replaceable>domain.name</replaceable></"
-"command> ਲਿਖੋ। ਜੇ ਰਿਮੋਟ ਮਸ਼ੀਨ <filename>example.com</"
-"filename> ਹੈ ਅਤੇ ਉਸ ਮਸ਼ੀਨ ਤੇ ਤੁਹਾਡਾ ਯੂਜ਼ਰ-ਨਾਂ john ਹੈ, ਤਾਂ <command>ssh "
-"john@example.com</command> ਲਿਖੋ।"
+"command> ਲਿਖੋ। ਜੇ ਰਿਮੋਟ ਮਸ਼ੀਨ <filename>example.com</filename> ਹੈ ਅਤੇ ਉਸ ਮਸ਼ੀਨ ਤੇ "
+"ਤੁਹਾਡਾ ਯੂਜ਼ਰ-ਨਾਂ john ਹੈ, ਤਾਂ <command>ssh john@example.com</command> ਲਿਖੋ।"
 
 #. Tag: para
 #, no-c-format
@@ -280,11 +272,10 @@ msgid ""
 "<filename>/home</filename> file system, the command is <command>mount -o "
 "remount /home</command>."
 msgstr ""
-"<command>mount -o remount <replaceable>file-system</replaceable></"
-"command> ਕਮਾਂਡ ਦਿੱਤੇ-ਨਾਂ ਵਾਲੇ ਫਾਇਲ ਸਿਸਟਮ ਨੂੰ ਮੁੜ ਤੋਂ ਮਾਊਂਟ ਕਰਦਾ ਹੈ। ਉਦਾਹਰਨ "
-"ਲਈ, <filename>/home</filename> ਫਾਇਲ ਸਿਸਟਮ ਨੂੰ ਮਾਊਂਟ ਕਰਨ ਲਈ, ਕਮਾਂਡ ਹੈ <"
-"command>mount -o "
-"remount /home</command>।"
+"<command>mount -o remount <replaceable>file-system</replaceable></command> "
+"ਕਮਾਂਡ ਦਿੱਤੇ-ਨਾਂ ਵਾਲੇ ਫਾਇਲ ਸਿਸਟਮ ਨੂੰ ਮੁੜ ਤੋਂ ਮਾਊਂਟ ਕਰਦਾ ਹੈ। ਉਦਾਹਰਨ ਲਈ, <filename>/home</"
+"filename> ਫਾਇਲ ਸਿਸਟਮ ਨੂੰ ਮਾਊਂਟ ਕਰਨ ਲਈ, ਕਮਾਂਡ ਹੈ <command>mount -o remount /home</"
+"command>।"
 
 #. Tag: para
 #, no-c-format
@@ -294,10 +285,9 @@ msgid ""
 "result as follows: <command><replaceable>package-version-release</"
 "replaceable></command>."
 msgstr ""
-"ਮੌਜੂਦਾ ਇੰਸਟਾਲੇ ਕੀਤੇ ਪੈਕੇਜ ਦਾ ਵਰਜਨ ਵੇਖਣ ਲਈ, <command>rpm -q "
-"<replaceable>package</replaceable></command> ਕਮਾਂਡ ਵਰਤੋ। ਇਹ ਇਸ ਤਰਾਂ ਦਾ ਨਤੀਜਾ "
-"ਦੇਵੇਗਾ: <command><replaceable>package-version-release</"
-"replaceable></command>।"
+"ਮੌਜੂਦਾ ਇੰਸਟਾਲੇ ਕੀਤੇ ਪੈਕੇਜ ਦਾ ਵਰਜਨ ਵੇਖਣ ਲਈ, <command>rpm -q <replaceable>package</"
+"replaceable></command> ਕਮਾਂਡ ਵਰਤੋ। ਇਹ ਇਸ ਤਰਾਂ ਦਾ ਨਤੀਜਾ ਦੇਵੇਗਾ: "
+"<command><replaceable>package-version-release</replaceable></command>।"
 
 #. Tag: para
 #, no-c-format
@@ -306,9 +296,9 @@ msgid ""
 "system, package, version and release. Each word is a placeholder, either for "
 "text you enter when issuing a command or for text displayed by the system."
 msgstr ""
-"ਉੱਪਰਲੇ ਬੋਲਡ ਇਟਾਲਿਕ ਸ਼ਬਦਾਂ ਦਾ ਧਿਆਨ ਰੱਖੋ &mdash; ਯੂਜ਼ਰ-ਨਾਂ, domain.name, "
-"ਫਾਇਲ-ਸਿਸਟਮ, ਪੈਕੇਜ, ਵਰਜਨ ਅਤੇ ਰੀਲੀਜ਼। ਪਲੇਸਹੋਰਡਰ ਵਿਚਲਾ ਹਰੇਕ ਸ਼ਬਦ, ਕਮਾਂਡ ਜਾਰੀ ਕਰਨ "
-"ਵੇਲੇ ਦਿੱਤੇ ਪਾਠ ਲਈ ਜਾਂ ਸਿਸਟਮ ਦੁਆਰਾ ਵੇਖਾਏ ਪਾਠ ਲਈ।"
+"ਉੱਪਰਲੇ ਬੋਲਡ ਇਟਾਲਿਕ ਸ਼ਬਦਾਂ ਦਾ ਧਿਆਨ ਰੱਖੋ &mdash; ਯੂਜ਼ਰ-ਨਾਂ, domain.name, ਫਾਇਲ-ਸਿਸਟਮ, "
+"ਪੈਕੇਜ, ਵਰਜਨ ਅਤੇ ਰੀਲੀਜ਼। ਪਲੇਸਹੋਰਡਰ ਵਿਚਲਾ ਹਰੇਕ ਸ਼ਬਦ, ਕਮਾਂਡ ਜਾਰੀ ਕਰਨ ਵੇਲੇ ਦਿੱਤੇ ਪਾਠ ਲਈ ਜਾਂ "
+"ਸਿਸਟਮ ਦੁਆਰਾ ਵੇਖਾਏ ਪਾਠ ਲਈ।"
 
 #. Tag: para
 #, no-c-format
@@ -316,15 +306,16 @@ msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
 msgstr ""
-"ਇੱਕ ਕੰਮ ਦਾ ਸਿਰਲੇਖ ਵੇਖਾਉਣ ਲਈ ਸਟੈਂਡਰਡ ਵਰਤੋਂ ਤੋਂ ਉਲਟ, ਇਟਾਲਿਕ ਨਵੀਂ ਅਤੇ ਜਰੂਰੀ "
-"ਜਾਣਕਾਰੀ ਨੂੰ ਵੇਖਾਉਣ ਲਈ ਵਰਤਿਆ ਜਾਂਦਾ ਹੈ। ਉਦਾਹਰਨ ਲਈ:"
+"ਇੱਕ ਕੰਮ ਦਾ ਸਿਰਲੇਖ ਵੇਖਾਉਣ ਲਈ ਸਟੈਂਡਰਡ ਵਰਤੋਂ ਤੋਂ ਉਲਟ, ਇਟਾਲਿਕ ਨਵੀਂ ਅਤੇ ਜਰੂਰੀ ਜਾਣਕਾਰੀ ਨੂੰ ਵੇਖਾਉਣ "
+"ਲਈ ਵਰਤਿਆ ਜਾਂਦਾ ਹੈ। ਉਦਾਹਰਨ ਲਈ:"
 
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
 msgstr "Publican ਇੱਕ <firstterm>DocBook</firstterm> ਪਬਲਿਸ਼ ਕਰਨ ਵਾਲਾ ਸਿਸਟਮ ਹੈ।"
 
-#. Tag: title, no-c-format
+#. Tag: title
+#, no-c-format
 msgid "Pull-quote Conventions"
 msgstr "ਸਵਲਾ-ਲਵੋ ਕੰਨਵੈਂਸ਼ਨਜ਼"
 
@@ -333,8 +324,7 @@ msgstr "ਸਵਲਾ-ਲਵੋ ਕੰਨਵੈਂਸ਼ਨਜ਼"
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
-msgstr ""
-"ਟਰਮੀਨਲ ਆਊਟਪੁੱਟ ਅਤੇ ਸੋਰਸ ਕੋਡ ਸੂਚੀ ਨੂੰ ਆਸੇ ਪਾਸੇ ਦੇ ਪਾਠ ਤੋਂ ਅਦਿੱਖ ਕੀਤੇ ਹਨ।"
+msgstr "ਟਰਮੀਨਲ ਆਊਟਪੁੱਟ ਅਤੇ ਸੋਰਸ ਕੋਡ ਸੂਚੀ ਨੂੰ ਆਸੇ ਪਾਸੇ ਦੇ ਪਾਠ ਤੋਂ ਅਦਿੱਖ ਕੀਤੇ ਹਨ।"
 
 #. Tag: para
 #, no-c-format
@@ -342,8 +332,8 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
 msgstr ""
-"ਟਰਮੀਨਲ ਤੇ ਭੇਜੀ ਆਊਟਪੁੱਟ <computeroutput>ਮੋਨੋ-ਸਪੇਸ ਰੋਮਨ</"
-"computeroutput> ਵਿੱਚ ਸੈੱਟ ਕੀਤੇ ਹਨ ਅਤੇ ਵੇਖਾਏ ਗਏ ਹਨ:"
+"ਟਰਮੀਨਲ ਤੇ ਭੇਜੀ ਆਊਟਪੁੱਟ <computeroutput>ਮੋਨੋ-ਸਪੇਸ ਰੋਮਨ</computeroutput> ਵਿੱਚ ਸੈੱਟ ਕੀਤੇ ਹਨ "
+"ਅਤੇ ਵੇਖਾਏ ਗਏ ਹਨ:"
 
 #. Tag: para
 #, no-c-format
@@ -351,8 +341,8 @@ msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"ਸੋਰਸ ਕੋਡ ਸੂਚੀ ਵੀ <computeroutput>ਮੋਨੋ-ਸਪੇਸ ਰੋਮਨ</"
-"computeroutput> ਵਿੱਚ ਸੈੱਟ ਕੀਤੇ ਹਨ ਪਰ ਸੈਂਟੇਕਸ ਇਸ ਤਰਾਂ ਵੇਖਾਇਆ ਗਿਆ ਹੈ:"
+"ਸੋਰਸ ਕੋਡ ਸੂਚੀ ਵੀ <computeroutput>ਮੋਨੋ-ਸਪੇਸ ਰੋਮਨ</computeroutput> ਵਿੱਚ ਸੈੱਟ ਕੀਤੇ ਹਨ ਪਰ "
+"ਸੈਂਟੇਕਸ ਇਸ ਤਰਾਂ ਵੇਖਾਇਆ ਗਿਆ ਹੈ:"
 
 #. Tag: title
 #, no-c-format
@@ -364,9 +354,7 @@ msgstr "ਸੂਚਨਾ ਅਤੇ ਚੇਤਾਵਨੀ"
 msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
-msgstr ""
-"ਅੰਤ ਵਿੱਚ, ਅਸੀਂ ਜਾਣਕਾਰੀ ਵੇਖਾਉਣ ਲਈ ਤਿੰਨ ਦਰਿਸ਼ ਸਟਾਈਲ ਵਰਤਦੇ ਹਾਂ ਜੋ ਵਰਤੇ ਜਾ ਸਕਦੇ "
-"ਹਨ।"
+msgstr "ਅੰਤ ਵਿੱਚ, ਅਸੀਂ ਜਾਣਕਾਰੀ ਵੇਖਾਉਣ ਲਈ ਤਿੰਨ ਦਰਿਸ਼ ਸਟਾਈਲ ਵਰਤਦੇ ਹਾਂ ਜੋ ਵਰਤੇ ਜਾ ਸਕਦੇ ਹਨ।"
 
 #. Tag: title
 #, no-c-format
@@ -380,8 +368,8 @@ msgid ""
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
-"ਸੂਚਨਾ ਅਤੇ ਟਿੱਪਣੀਆਂ, ਸ਼ਾਰਟਕੱਟ ਜਾਂ ਹੋਰ ਤਰੀਕੇ ਜੋ ਵਰਤ ਸਕਦੇ ਹਾਂ। ਸੂਚਨਾ ਅਣਡਿੱਠਾ ਕਰਨ "
-"ਨਾਲ ਕੋਈ ਨੈਗੇਟਿਵ ਪ੍ਰਭਾਵ ਨਹੀਂ ਪੈਂਦਾ, ਪਰ ਜਿੰਗਦੀ ਸੌਖੀ ਬਣਾਉਣ ਦਾ ਮੌਕਾ ਲੰਘ ਸਕਦਾ ਹੈ।"
+"ਸੂਚਨਾ ਅਤੇ ਟਿੱਪਣੀਆਂ, ਸ਼ਾਰਟਕੱਟ ਜਾਂ ਹੋਰ ਤਰੀਕੇ ਜੋ ਵਰਤ ਸਕਦੇ ਹਾਂ। ਸੂਚਨਾ ਅਣਡਿੱਠਾ ਕਰਨ ਨਾਲ ਕੋਈ ਨੈਗੇਟਿਵ "
+"ਪ੍ਰਭਾਵ ਨਹੀਂ ਪੈਂਦਾ, ਪਰ ਜਿੰਗਦੀ ਸੌਖੀ ਬਣਾਉਣ ਦਾ ਮੌਕਾ ਲੰਘ ਸਕਦਾ ਹੈ।"
 
 #. Tag: title
 #, no-c-format
@@ -396,10 +384,9 @@ msgid ""
 "before an update will apply. Ignoring a box labeled 'Important' won't cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
-"ਜਰੂਰੀ ਬਾਕਸ ਵੇਰਵਾ ਚੀਜਾਂ ਅਸਾਨੀ ਨਾਲ ਰੱਦ ਕੀਤੀਆਂ ਜਾ ਸਕਦੀਆਂ ਹਨ: ਸੰਰਚਨਾ ਤਬਦੀਲੀਆਂ ਜੋ "
-"ਸਿਰਫ ਮੌਜੂਦਾ ਸ਼ਐਸ਼ਨ ਤੇ ਲਾਗੂ ਹੁੰਦੇ ਹਨ, ਜਾਂ ਸਰਵਿਸ ਜਿਸਨੂੰ ਅੱਪਡੇਟ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ "
-"ਮੁੜ-ਚਾਲੂ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। 'ਜਰੂਰੀ' ਲੇਬਲ ਵਾਲਾ ਬਾਕਸ ਰੱਦ ਕਰਨ ਨਾਲ ਡਾਟਾ ਖਰਾਬ ਨਹੀਂ "
-"ਹੁੰਦਾ ਪਰ ਹੋਰ ਖਰਾਬੀ ਹੋ ਸਕਦੀ ਹੈ।"
+"ਜਰੂਰੀ ਬਾਕਸ ਵੇਰਵਾ ਚੀਜਾਂ ਅਸਾਨੀ ਨਾਲ ਰੱਦ ਕੀਤੀਆਂ ਜਾ ਸਕਦੀਆਂ ਹਨ: ਸੰਰਚਨਾ ਤਬਦੀਲੀਆਂ ਜੋ ਸਿਰਫ "
+"ਮੌਜੂਦਾ ਸ਼ਐਸ਼ਨ ਤੇ ਲਾਗੂ ਹੁੰਦੇ ਹਨ, ਜਾਂ ਸਰਵਿਸ ਜਿਸਨੂੰ ਅੱਪਡੇਟ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਮੁੜ-ਚਾਲੂ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। "
+"'ਜਰੂਰੀ' ਲੇਬਲ ਵਾਲਾ ਬਾਕਸ ਰੱਦ ਕਰਨ ਨਾਲ ਡਾਟਾ ਖਰਾਬ ਨਹੀਂ ਹੁੰਦਾ ਪਰ ਹੋਰ ਖਰਾਬੀ ਹੋ ਸਕਦੀ ਹੈ।"
 
 #. Tag: title
 #, no-c-format
@@ -411,9 +398,7 @@ msgstr "ਚੇਤਾਵਨੀ"
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr ""
-"ਚੇਤਾਵਨੀਆਂ ਰੱਦ ਨਹੀਂ ਹੋਣੀਆਂ ਚਾਹੀਦੀਆਂ। ਚੇਤਾਵਨੀਆਂ ਰੱਦ ਕਰਨ ਨਾਲ ਡਾਟਾ ਖਰਾਬ ਹੋ ਸਕਦਾ "
-"ਹੈ।"
+msgstr "ਚੇਤਾਵਨੀਆਂ ਰੱਦ ਨਹੀਂ ਹੋਣੀਆਂ ਚਾਹੀਦੀਆਂ। ਚੇਤਾਵਨੀਆਂ ਰੱਦ ਕਰਨ ਨਾਲ ਡਾਟਾ ਖਰਾਬ ਹੋ ਸਕਦਾ ਹੈ।"
 
 #~ msgid ""
 #~ "Certain words in this manual are represented in different fonts, styles, "
