--- a/publican-redhat/de-DE/Feedback.po
+++ b/publican-redhat/de-DE/Feedback.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2010-02-26 13:14+1000\n"
+"POT-Creation-Date: 2010-02-26T05:15:19\n"
+"PO-Revision-Date: 2010-02-26 15:32+1000\n"
 "Last-Translator: sknirT omiT <<moc.tahder@sknirtt>>\n"
 "Language-Team:  <de@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -15,131 +15,112 @@ msgstr ""
 "X-Generator: KBabel 1.11.4\n"
 
 #. Tag: title
-#: Feedback.xml:6
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
 msgstr "Hilfe bekommen und Feedback geben"
 
 #. Tag: title
-#: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
 msgstr "Brauchen Sie Hilfe?"
 
 #. Tag: primary
-#: Feedback.xml:10
 #, no-c-format
 msgid "help"
 msgstr "Hilfe"
 
 #. Tag: secondary
-#: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
 msgstr "Hilfe bekommen"
 
 #. Tag: para
-#: Feedback.xml:13
 #, no-c-format
 msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
 msgstr ""
-"Falls Sie Schwierigkeiten mit einer der in diesem Handbuch "
-"beschriebenen Prozeduren haben, bestehen die folgenden Möglichkeiten, um Hilfe zu erhalten:"
+"Falls Sie Schwierigkeiten mit einer der in diesem Handbuch beschriebenen "
+"Prozeduren haben, bestehen die folgenden Möglichkeiten, um Hilfe zu erhalten:"
 
 #. Tag: term
-#: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
 msgstr "Red Hat Knowledgebase"
 
 #. Tag: para
-#: Feedback.xml:20
 #, no-c-format
 msgid ""
-"Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></"
-"ulink> to search or browse through technical support articles about Red Hat "
+"Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\" /> "
+"to search or browse through technical support articles about Red Hat "
 "products."
 msgstr ""
-"Besuchen Sie die Red Hat Knowledgebase unter <ulink url=\"http://kbase.redhat.com\">, um in Artikeln rund um technische Hilfestellungen für Red "
-"Hat Produkte zu suchen oder zu stöbern."
+"Besuchen Sie die Red Hat Knowledgebase unter <ulink url=\"http://kbase.redhat.com\" />, um in Artikeln rund um technische Hilfestellungen für Red Hat "
+"Produkte zu suchen oder zu stöbern."
 
 #. Tag: term
-#: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
 msgstr "Red Hat Global Support Services"
 
 #. Tag: para
-#: Feedback.xml:28
 #, no-c-format
 msgid ""
 "Your Red Hat subscription entitles you to support from Red Hat Global "
-"Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
-"ulink> for more information about obtaining help from GSS."
+"Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\" /> "
+"for more information about obtaining help from GSS."
 msgstr ""
-"Ihr Red Hat Abonnement berechtigt Sie für den Support von Red Hat Global Support Services (GSS). Unter <ulink url=\"https://support.redhat.com\"> finden Sie weitere Informationen darüber, wie Sie Hilfe von "
-"GSS erhalten."
+"Ihr Red Hat Abonnement berechtigt Sie für den Support von Red Hat Global "
+"Support Services (GSS). Unter <ulink url=\"http://support.redhat.com\" /> "
+"finden Sie weitere Informationen darüber, wie Sie Hilfe von GSS erhalten."
 
 #. Tag: term
-#: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
 msgstr "Weitere Red Hat Dokumentationen"
 
 #. Tag: para
-#: Feedback.xml:36
 #, no-c-format
 msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
-"\"></ulink>"
-msgstr ""
-"Weitere Red Hat Dokumentationen finden Sie unter <ulink url=\"http://www."
-"redhat.com/docs/\">"
+"\" />"
+msgstr "Weitere Red Hat Dokumentationen finden Sie unter <ulink url=\"http://www.redhat.com/docs\" />"
 
 #. Tag: term
-#: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
 msgstr "Red Hat Mailing-Listen"
 
 #. Tag: para
-#: Feedback.xml:44
 #, no-c-format
 msgid ""
 "Red Hat hosts a large number of electronic mailing lists for discussion of "
 "Red Hat software and technology. You can find a list of publicly available "
-"lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
-"Click on the name of any list to subscribe to that list or to access the "
-"list archives."
+"lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on "
+"the name of any list to subscribe to that list or to access the list "
+"archives."
 msgstr ""
 "Red Hat unterhält eine Vielzahl von Mailing-Listen zur Diskussion über Red "
 "Hat Software und Technologie. Eine Übersicht der öffentlich verfügbaren "
-"Listen finden Sie unter <ulink url=\"https://www.redhat.com/mailman/listinfo"
-"\">. Klicken Sie auf den Namen einer Liste für weitere Einzelheiten zum "
+"Listen finden Sie unter <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Klicken Sie auf den Namen einer Liste für weitere Einzelheiten zum "
 "Abonnieren dieser Liste oder um auf deren Archiv zuzugreifen."
 
 #. Tag: title
-#: Feedback.xml:53
 #, no-c-format
 msgid "We Need Feedback!"
 msgstr "Wir freuen uns auf Ihr Feedback!"
 
 #. Tag: primary
-#: Feedback.xml:55
 #, no-c-format
 msgid "feedback"
 msgstr "Feedback"
 
 #. Tag: secondary
-#: Feedback.xml:56
 #, no-c-format
 msgid "contact information for this manual"
 msgstr "Kontaktinformationen für dieses Handbuch"
 
 #. Tag: para
-#: Feedback.xml:58
 #, no-c-format
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
@@ -155,17 +136,13 @@ msgstr ""
 "\">http://bugzilla.redhat.com/</ulink> ein."
 
 #. Tag: para
-#: Feedback.xml:61
 #, no-c-format
 msgid ""
-"When submitting a bug report, be sure to mention the manual&#39;s "
-"identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr ""
-"Vergewissern Sie sich beim Einreichen eines Fehlerberichts die Kennung des "
-"Handbuchs mit anzugeben: <citetitle>&BOOKID;</citetitle>"
+"When submitting a bug report, be sure to mention the manual's identifier: "
+"<citetitle>&BOOKID;</citetitle>"
+msgstr "Vergewissern Sie sich beim Einreichen eines Fehlerberichts die Kennung des Handbuchs mit anzugeben: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
-#: Feedback.xml:64
 #, no-c-format
 msgid ""
 "If you have a suggestion for improving the documentation, try to be as "
